# GoogleStartupContest

./: .gitignore
api/: .dockerignore  Dockerfile  pyproject.toml
api/core/: app.py  config.py
api/core/routers/: websocket_server.py
api/core/test/: connection.py
ui/: package-lock.json  package.json
ui/public/: audio-processor-worklet.js  index.css  index.html
ui/src/: App.js  index.css  index.js
ui/src/components/: AudioRecorder.tsx  AudioWave.tsx  BroadcastScreen.js
ui/src/config/: variables.js
ui/src/hooks/: useAudioRecorder.tsx  useWebsocket.jsx
ui/src/pages/: BroadcasterPage.js  MainPage.js  RecordButton.js
